crates/runtime/tests/models/snapshots/integration_models__models__openai__embeddings__base64_format.snap
---
source: crates/runtime/tests/models/openai.rs
expression: normalize_embeddings_response(response)
---
{
  "object": "list",
  "model": "openai_embeddings",
  "data": [
    {
      "index": 0,
      "object": "embedding",
      "embedding": "str_len_684"
    },
    {
      "index": 1,
      "object": "embedding",
      "embedding": "str_len_684"
    }
  ],
  "usage": {
    "prompt_tokens": 8,
    "total_tokens": 8
  }
}
