crates/runtime/tests/models/snapshots/integration_models__models__openai__embeddings__basic.snap
---
source: crates/runtime/tests/models/openai.rs
expression: normalize_embeddings_response(response)
---
{
  "object": "list",
  "model": "openai_embeddings",
  "data": [
    {
      "index": 0,
      "object": "embedding",
      "embedding": "array_1536_items"
    }
  ],
  "usage": {
    "prompt_tokens": 8,
    "total_tokens": 8
  }
}
